--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ jsonschema-specifications==2025.4.1
 MarkupSafe==3.0.2
 mpmath==1.3.0
 narwhals==1.41.0
-networkx==3.5
+networkx
 numpy==2.2.6
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
